clusters/production/argocd/resources/headlamp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=confirm,Delete=confirm
  name: headlamp
  labels:
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/managed-by: argocd
