clusters/production/argocd/resources/headlamp/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  headlamp
labels:
  app.kubernetes.io/part-of: platform
  app.kubernetes.io/managed-by: argocd
