clusters/production/argocd/resources/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  labels:
    app.kubernetes.io/name: headlamp
spec:
  rules:
  - host: headlamp.k8s.tss.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: headlamp
            port: 
              number: 80
